# trajectory_sender

./: .gitignore  CMakeLists.txt  copy_bmt.sh  copy_eurathlon.sh  package.xml
include/trajectory_sender/: traj_sender.hpp
src/: traj_sender.cpp
